<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:padding="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="5.0dp" android:layout_marginEnd="10.0dp" android:layout_toStartOf="@id/showBubble" android:layout_alignParentStart="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryText" android:ellipsize="end" android:id="@id/showBubbleTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_show_bubble" android:maxLines="1" android:lines="1" android:minLines="1" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorSecondText" android:ellipsize="end" android:id="@id/showBubbleDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_show_bubble_d" android:maxLines="2" android:minLines="1" />
            </LinearLayout>
            <RelativeLayout android:id="@id/hideBubble" android:background="@drawable/background_item_color" android:layout_width="50.0dp" android:layout_height="50.0dp" android:layout_marginEnd="5.0dp" android:layout_alignParentEnd="true">
                <ImageView android:id="@id/hideBubbleImage" android:layout_width="24.0dp" android:layout_height="24.0dp" android:src="@drawable/ic_baseline_visibility_off_24" android:layout_centerInParent="true" android:contentDescription="@string/app_name" app:tint="#4d4d4d" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/showBubble" android:background="@drawable/background_item_color_current" android:layout_width="50.0dp" android:layout_height="50.0dp" android:layout_marginEnd="15.0dp" android:layout_toStartOf="@id/hideBubble">
                <ImageView android:id="@id/showBubbleImage" android:layout_width="24.0dp" android:layout_height="24.0dp" android:src="@drawable/ic_baseline_visibility_24" android:layout_centerInParent="true" android:contentDescription="@string/app_name" app:tint="#4d4d4d" />
            </RelativeLayout>
        </RelativeLayout>
        <View android:background="#cccccc" android:layout_width="wrap_content" android:layout_height="1.0dp" />
        <RelativeLayout android:padding="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="5.0dp" android:layout_marginEnd="10.0dp" android:layout_toStartOf="@id/sizeBubble" android:layout_alignParentStart="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryText" android:ellipsize="end" android:id="@id/sizeBubbleTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_size_bubble" android:maxLines="1" android:lines="1" android:minLines="1" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorSecondText" android:ellipsize="end" android:id="@id/sizeBubbleDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_size_bubble_d" android:maxLines="2" android:minLines="1" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/sizeBubble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:overScrollMode="never" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="#cccccc" android:layout_width="wrap_content" android:layout_height="1.0dp" />
        <RelativeLayout android:padding="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="5.0dp" android:layout_marginEnd="10.0dp" android:layout_toStartOf="@id/transparencySeek" android:layout_alignParentStart="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryText" android:ellipsize="end" android:id="@id/transparencyTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_transparency" android:maxLines="1" android:lines="1" android:minLines="1" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorSecondText" android:ellipsize="end" android:id="@id/transparencyDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_transparency_d" android:maxLines="2" android:minLines="1" />
            </LinearLayout>
            <SeekBar android:id="@id/transparencySeek" android:layout_width="120.0dp" android:layout_height="wrap_content" android:max="255" android:layout_centerInParent="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="#cccccc" android:layout_width="wrap_content" android:layout_height="1.0dp" />
        <LinearLayout android:orientation="vertical" android:padding="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryText" android:ellipsize="end" android:id="@id/keyboardTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_keyboard_mode" android:maxLines="1" android:lines="1" android:minLines="1" android:layout_marginStart="5.0dp" />
            <TextView android:textSize="13.0sp" android:textColor="@color/colorSecondText" android:ellipsize="end" android:id="@id/keyboardDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_keyboard_mode_d" android:maxLines="2" android:minLines="1" android:layout_marginStart="5.0dp" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp">
                <TextView android:textSize="13.0sp" android:textColor="@color/colorPrimaryText" android:gravity="center" android:id="@id/keyboardMode0" android:background="@drawable/background_item_color" android:padding="8.0dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="5.0dp" android:layout_marginEnd="5.0dp" android:text="@string/text_keyboard_system" android:maxLines="1" android:layout_weight="1.0" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorPrimaryText" android:gravity="center" android:id="@id/keyboardMode1" android:background="@drawable/background_item_color" android:padding="8.0dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginEnd="5.0dp" android:text="@string/text_keyboard_builtin" android:maxLines="1" android:layout_weight="1.0" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorPrimaryText" android:gravity="center" android:id="@id/keyboardMode2" android:background="@drawable/background_item_color" android:padding="8.0dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginEnd="5.0dp" android:text="@string/text_keyboard_paste" android:maxLines="1" android:layout_weight="1.0" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorPrimaryText" android:gravity="center" android:id="@id/keyboardMode3" android:background="@drawable/background_item_color" android:padding="8.0dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginEnd="5.0dp" android:text="@string/text_keyboard_nothing" android:maxLines="1" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <View android:background="#cccccc" android:layout_width="wrap_content" android:layout_height="1.0dp" />
        <RelativeLayout android:padding="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="5.0dp" android:layout_marginEnd="10.0dp" android:layout_toStartOf="@id/restartBubble" android:layout_alignParentStart="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryText" android:ellipsize="end" android:id="@id/restartTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_restart" android:maxLines="1" android:lines="1" android:minLines="1" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorSecondText" android:ellipsize="end" android:id="@id/restartDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_restart_d" android:maxLines="2" android:minLines="1" />
            </LinearLayout>
            <RelativeLayout android:id="@id/restartBubble" android:background="@drawable/background_item_color" android:layout_width="50.0dp" android:layout_height="50.0dp" android:layout_marginEnd="5.0dp" android:layout_centerInParent="true" android:layout_alignParentEnd="true">
                <ImageView android:id="@id/restartBubbleImage" android:layout_width="24.0dp" android:layout_height="24.0dp" android:src="@drawable/ic_baseline_refresh_24" android:layout_centerInParent="true" android:contentDescription="@string/app_name" app:tint="#4d4d4d" />
            </RelativeLayout>
        </RelativeLayout>
        <View android:background="#cccccc" android:layout_width="wrap_content" android:layout_height="1.0dp" />
        <RelativeLayout android:padding="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_marginStart="5.0dp" android:layout_marginEnd="10.0dp" android:layout_toStartOf="@id/cropAttach" android:layout_alignParentStart="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryText" android:ellipsize="end" android:id="@+id/cropAttachTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_crop_attach" android:maxLines="1" android:lines="1" android:minLines="1" />
                <TextView android:textSize="13.0sp" android:textColor="@color/colorSecondText" android:ellipsize="end" android:id="@+id/cropAttachDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_crop_attach_d" android:maxLines="2" android:minLines="1" />
            </LinearLayout>
            <RelativeLayout android:id="@id/cropAttach" android:background="@drawable/background_item_color" android:layout_width="50.0dp" android:layout_height="50.0dp" android:layout_marginEnd="5.0dp" android:layout_centerInParent="true" android:layout_alignParentEnd="true">
                <ImageView android:id="@+id/cropAttachImage" android:layout_width="22.0dp" android:layout_height="22.0dp" android:layout_centerHorizontal="true" android:layout_marginTop="4.0dp" android:src="@drawable/ic_baseline_crop_24" android:contentDescription="@string/app_name" app:tint="#4d4d4d" />
                <TextView android:textSize="9.0sp" android:textColor="@color/colorPrimaryText" android:id="@+id/cropAttachState" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="3.0dp" android:text="@string/v7_preference_on" android:maxLines="1" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
